Update FighterController.java